# django-virtualqueryset

./: .gitignore  pyproject.toml
docs/: AI.md  README.md  development.md  purpose.md  structure.md
src/virtualqueryset/: __init__.py
src/virtualqueryset/queryset/: __init__.py
tests/: __init__.py  settings.py
